--- a/style.css
+++ b/style.css
@@ -35,3 +35,40 @@ button {
   border-radius: 5px;
   box-shadow: 2px 5px 5px #333;
 }
+
+#tasks {
+  margin: 0;
+  padding: 0;
+
+}
+
+li {
+  text-decoration: none;
+  overflow: hidden;
+  border-bottom: 1px solid #eee;
+
+}
+
+.delete-button {
+  color: #898686;
+  cursor: pointer;
+  display: inline-flex;
+  font-size: 14px;
+  font-weight: bold;
+  line-height: 20px;
+  list-style: none;
+  margin: 0;
+  padding: 4px 16px;
+  text-align: center;
+  transition: all 200ms;
+  vertical-align: baseline;
+  white-space: nowrap;
+  user-select: none;
+  -webkit-user-select: none;
+
+
+}
+
+.delete-button:hover {
+  color: black;
+}
